Made a couple changes to Niels' changes.

--- a/paper/cmsc636-swarmvis.tex
+++ b/paper/cmsc636-swarmvis.tex
@@ -316,7 +316,7 @@ is shown by how long ago a pattern happened in the trail.}
 \subsubsection{Trails}
 
 Trails are one of the most important features in SwarmVis because they convey motion, previous positions, direction,
-and change in structure. This fact applies equally to still images and videos. Trails are lines that hang behind agents, tracing
+and change in structure. This is true for both still images and videos. Trails are lines that hang behind agents, tracing
 their previous positions. 
 The trails are created by connecting previous positions of the agents with
 successive lines that are more opaque near the head of the agent and less so further back in time.
@@ -329,7 +329,7 @@ One of the most powerful abilities of trails is to convey low-level behavioral i
 in Figure \ref{CloseTrails}, we can see that the right-most corner agent (colored red) swapped position with the right-most
 edge agent (colored blue). Then, all the agents in that edge shifted down to accommodate.
 The time delay in behavior is shown by the ``notch" in the path happening further back in time for the left agents, and more recently for the right agents.
-This visualization feature makes qualitative analysis of agent behavior possible - both at a low interaction level
+This visualization feature makes qualitative analysis of agent behavior possible -- both at a low interaction level
 and a high emergent level.
 
 
