made a quick revision to the future work section so that we won't have conflicts if Niels modifys it

--- a/paper/cmsc636-swarmvis.tex
+++ b/paper/cmsc636-swarmvis.tex
@@ -556,8 +556,6 @@ In some situations, selecting agents that end up neighbors can convey informatio
 
 
 \section{Future Work}
-We have demonstrated that SwarmVis is a powerful and dynamic tool.
-It is a complete application that has accomplished all the original goals that we set out to achieve.
 However, there are a few user interface changes that could make usability better.
 Also, we would like SwarmVis to somehow be able to better visualize the  depth of
 agents, trails and tracks since this information is not explicitly present in the graphical display.
@@ -596,6 +594,10 @@ A plug-in user interface will have to be implemented that allows users to manage
 There should be some way for the plug-ins to interface with the global agent list to add informations to columns
 and access information.
 
+
+\section{Conclusion}
+We have demonstrated that SwarmVis is a powerful and dynamic tool.
+It is a complete application that has accomplished all the original goals that we set out to achieve.
 
 \bibliographystyle{IEEE}
 \bibliography{cmsc636-swarmvis}
