--- a/trunk/paper/cmsc636-swarmvis.tex
+++ b/trunk/paper/cmsc636-swarmvis.tex
@@ -595,14 +595,22 @@ There should be some way for the plug-ins to interface with the global agent lis
 and access information.
 
 
+
+
+
 \section{Conclusion}
 We have demonstrated that SwarmVis is a powerful and dynamic tool.
 It is a complete application that has accomplished all the original goals that we set out to achieve.
+SawrmVis is able to create animations and still images that convey agent position, agent direction and agent velocity.
+It can also help with the identification of many emergent properties of swarms, such as structure.
+We believe that the set of visualizations provided make this tool dynamic and applicable to many domains.
+Our work simplifies the task of detailed analysis of emergent behavior and
+enables swarm intelligence researchers to come to new conclusions previously not possible.
+
 
 \bibliographystyle{IEEE}
 \bibliography{cmsc636-swarmvis}
 
-%\vspace{500pt}
 
 \pagebreak
 
